# inertial-navigation

./: README.md
imu_nav/: CMakeLists.txt
imu_nav/config/: pureImu.ini
imu_nav/plot-matlab/: Read_simu_ref.m  compare.m  plot_NED.m  plot_error.m
imu_nav/src/: CMakeLists.txt  PureImu.cpp
imu_nav/src/COMMON/: Attitude.cpp  Attitude.h  CMakeLists.txt  MyTime.h  const_info.cpp  const_info.h
imu_nav/src/IMU/: CMakeLists.txt  fileLoader.cpp  fileLoader.h  filesaver.cpp  filesaver.h  inerNav.cpp  inerNav.h
